# german_investment_analysis

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_experiments.py  run_investment.py  run_investment_split_eval.py  run_shap_comparison.py
.claude/: settings.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
data/: ADS_DE.csv  AIR_DE.csv  ALV_DE.csv  BAS_DE.csv  BEI_DE.csv  BMW_DE.csv  DB1_DE.csv  DTE_DE.csv  EOAN_DE.csv  FRE_DE.csv  HEN3_DE.csv  IFX_DE.csv  MBG_DE.csv  MTX_DE.csv  MUV2_DE.csv  RWE_DE.csv  SAP_DE.csv  SIE_DE.csv  SY1_DE.csv  VOW3_DE.csv  investment_dataset.csv  survey.db
models/: adj_matrix_DirectLiNGAM(b).npy  adj_matrix_directlingam.npy  catboost_DirectLiNGAM(b).cbm  catboost_best.cbm  dataset_metadata.json  label_encoder_classes.json  logistic_baseline.pkl  metadata.json  metadata_DirectLiNGAM(b).json  scaler.pkl  shap_values_DirectLiNGAM(b).npy
notebooks/: basic_eda.py
pipeline_scripts/: 01_data_download.py  02_feature_engineering.py  03_labeling.py  04_data_preparation.py  05_baseline_model.py  06_causal_discovery.py  07_lewis_scores.py  08_evaluation.py  09_comparison.py  10_governance.py  generate_comparison.py  pipeline.py
results/: 8var_linear_gaussian.csv  8var_linear_uniform.csv
src/: 01_data_download.py  02_feature_engineering.py  03_labeling.py  04_data_preparation.py  05_baseline_model.py  06_causal_discovery.py  07_lewis_scores.py  08_evaluation.py  09_comparison.py  10_governance.py  __init__.py  backdoor.py  causal_discovery.py  data_generation.py  evaluation.py  (+5 more)
(+234 files in other folders)
