[project]
name = "causal-xai"
version = "0.1.0"
description = "Causal Explainability for AI-Driven Investment Decisions in German Banks"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core scientific
    "numpy>=1.26,<2.5",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Causal discovery
    "causal-learn>=0.1.3",
    "lingam>=1.8",

    # ML models
    "catboost>=1.2",
    "xgboost>=2.0",
    "lightgbm>=4.0",

    # XAI
    "shap>=0.43",
    "dowhy>=0.11",

    # Utilities
    "networkx>=3.1",
    "tqdm>=4.65",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.25",
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.1",
]
data = [
    "yfinance>=0.2",
    "fredapi>=0.5",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
